default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
#  namespace: test
spec:
  podSelector: {} # 빈 셀렉터는 네임스페이스 내 모든 Pod을 의미
  policyTypes:
  - Ingress
